--- a/myproject.html
+++ b/myproject.html
@@ -4,7 +4,7 @@
     <link rel="stylesheet" href="./css/hover.css">
         <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>digitalclassroom </title>
+    <title>Portfolio </title>
 </head>
 <body>
     <div class="nav">
