--- a/myproject.html
+++ b/myproject.html
@@ -4,16 +4,16 @@
     <link rel="stylesheet" href="./css/hover.css">
         <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portfolio </title>
+    <title>Portfolio</title>
 </head>
 <body>
     <div class="nav">
         <ul>
         <li><a href="index.html">Home</a></li>
-        <li><a href="contact_US.html">Contact us</a></li>
-        <li><a href="About_us.html">About us </a></li>
-        <li><a href="#">Testominal</a></li>
-        <li><a href="Joinus.html">Join us</a></li>
+        <li><a href="contactme.html">Contact me</a></li>
+        <li><a href="Aboutme.html">  About me</a></li>
+        <li><a href="myteammember.html">Team member</a></li>
+        <li><a href="myproject.html">Projects</a></li>
         </ul>
     </div>
     
