--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
 <body>
     <div class="nav">
         <ul>
-        <li><a href="#">Home</a></li>
-        <li><a href="contact_US.html">Contact us</a></li>
-        <li><a href="About_us.html">About us </a></li>
-        <li><a href="#">Testominal</a></li>
-        <li><a href="Joinus.html">Join us</a></li>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="contactme.html">Contact me</a></li>
+        <li><a href="Aboutme.html">  About me</a></li>
+        <li><a href="myteammember.html">Team member</a></li>
+        <li><a href="myproject.html">Projects</a></li>
         </ul>
     </div>
     
